crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__backslash_continuation_indentation_windows_eol.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: backslash_continuation_indentation_eol(WINDOWS_EOL)
---
## Tokens
```
[
    (
        If,
        0..2,
    ),
    (
        True,
        3..7,
    ),
    (
        Colon,
        7..8,
    ),
    (
        Newline,
        8..10,
    ),
    (
        Indent,
        10..14,
    ),
    (
        Pass,
        14..18,
    ),
    (
        Newline,
        18..20,
    ),
    (
        Name(
            Name("print"),
        ),
        35..40,
    ),
    (
        Lpar,
        40..41,
    ),
    (
        String(
            "1",
        ),
        41..44,
        TokenFlags(
            DOUBLE_QUOTES,
        ),
    ),
    (
        Rpar,
        44..45,
    ),
    (
        Newline,
        45..47,
    ),
    (
        Dedent,
        47..47,
    ),
]
```
