crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__backslash_continuation_mismatch_indentation.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: "lex_invalid(&source, Mode::Module)"
---
## Tokens
```
[
    If 0..2,
    True 3..7,
    Colon 7..8,
    Newline 8..9,
    Indent 9..13,
    Int 13..14,
    Newline 14..15,
    Unknown 15..23,
    Int 23..24,
    Newline 24..25,
]
```
## Errors
```
[
    LexicalError {
        error: IndentationError,
        location: 15..23,
    },
]
```
