crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__backslash_continuation_multiple.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    (
        If,
        0..2,
    ),
    (
        True,
        3..7,
    ),
    (
        Colon,
        7..8,
    ),
    (
        Newline,
        8..9,
    ),
    (
        Indent,
        9..13,
    ),
    (
        Name(
            Name("x"),
        ),
        13..14,
    ),
    (
        Equal,
        15..16,
    ),
    (
        Int(
            1,
        ),
        17..18,
    ),
    (
        Newline,
        18..19,
    ),
    (
        Name(
            Name("print"),
        ),
        39..44,
    ),
    (
        Lpar,
        44..45,
    ),
    (
        Name(
            Name("x"),
        ),
        45..46,
    ),
    (
        Rpar,
        46..47,
    ),
    (
        Newline,
        47..48,
    ),
    (
        Dedent,
        48..48,
    ),
]
```
