crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__backslash_continuation_multiple_windows_eol.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: backslash_continuation_multiple_eol(WINDOWS_EOL)
---
## Tokens
```
[
    (
        If,
        0..2,
    ),
    (
        True,
        3..7,
    ),
    (
        Colon,
        7..8,
    ),
    (
        Newline,
        8..10,
    ),
    (
        Indent,
        10..14,
    ),
    (
        Name(
            Name("x"),
        ),
        14..15,
    ),
    (
        Equal,
        16..17,
    ),
    (
        Int(
            1,
        ),
        18..19,
    ),
    (
        Newline,
        19..21,
    ),
    (
        Name(
            Name("print"),
        ),
        43..48,
    ),
    (
        Lpar,
        48..49,
    ),
    (
        Name(
            Name("x"),
        ),
        49..50,
    ),
    (
        Rpar,
        50..51,
    ),
    (
        Newline,
        51..53,
    ),
    (
        Dedent,
        53..53,
    ),
]
```
