crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__backslash_continuation_overindented.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    (
        If,
        0..2,
    ),
    (
        True,
        3..7,
    ),
    (
        Colon,
        7..8,
    ),
    (
        Newline,
        8..9,
    ),
    (
        Indent,
        9..13,
    ),
    (
        Int(
            1,
        ),
        13..14,
    ),
    (
        Newline,
        14..15,
    ),
    (
        Indent,
        15..27,
    ),
    (
        Int(
            2,
        ),
        27..28,
    ),
    (
        Newline,
        28..29,
    ),
    (
        Dedent,
        29..29,
    ),
    (
        Dedent,
        29..29,
    ),
]
```
